@@ -2,7 +2,7 @@
 
 /*  IIP Server: Tiled Pyramidal TIFF handler
 
-    Copyright (C) 2000-2014 Ruven Pillay.
+    Copyright (C) 2000-2016 Ruven Pillay.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -31,7 +31,7 @@ using namespace std;
 void TPTImage::openImage() throw (file_error)
 {
 
-  // Insist that the tiff and tile_buf be non-NULL
+  // Insist that the tiff and tile_buf be NULL
   if( tiff || tile_buf ){
     throw file_error( "TPT::openImage: tiff or tile_buf is not NULL" );
   }
@@ -153,7 +153,8 @@ void TPTImage::loadImageInfo( int seq, int ang ) throw(file_error)
   for( unsigned int i=0; i<channels; i++ ){
     if( (!sminvalue) == smaxvalue[i] ){
       // Set default values if values not included in header
-      if( bpc == 8 ) smaxvalue[i] = 255.0;
+      if( bpc <= 8 ) smaxvalue[i] = 255.0;
+      else if( bpc == 12 ) smaxvalue[i] = 4095.0;
       else if( bpc == 16 ) smaxvalue[i] = 65535.0;
       else if( bpc == 32 && sampleType == FIXEDPOINT ) smaxvalue[i] = 4294967295.0;
     }
@@ -256,6 +257,10 @@ RawTile TPTImage::getTile( int seq, int ang, unsigned int res, int layers, unsig
 //   TIFFGetField( tiff, TIFFTAG_BITSPERSAMPLE, &bpc );
 
 
+  // Total number of bytes in tile
+  unsigned int np = tw * th;
+
+
   // Get the width and height for last row and column tiles
   rem_x = im_width % tw;
   rem_y = im_height % th;
@@ -318,6 +323,42 @@ RawTile TPTImage::getTile( int seq, int ang, unsigned int res, int layers, unsig
   rawtile.memoryManaged = 0;
   rawtile.padded = true;
   rawtile.sampleType = sampleType;
+
+
+  // Pad 1 bit 1 channel bilevel images to 8 bits for output
+  if( bpc==1 && channels==1 ){
+
+    // Pixel index
+    unsigned int n = 0;
+
+    // Calculate number of bytes used - round integer up efficiently
+    unsigned int nbytes = (np + 7) / 8;
+    unsigned char *buffer = new unsigned char[np];
+
+    // Take into account photometric interpretation:
+    //   0: white is zero, 1: black is zero
+    unsigned char min = (unsigned char) 0;
+    unsigned char max = (unsigned char) 255;
+    if( colour == 0 ){
+      min = (unsigned char) 255; max = (unsigned char) 0;
+    }
+
+    // Unpack each raw byte into 8 8-bit pixels
+    for( unsigned int i=0; i<nbytes; i++ ){
+      unsigned char t = ((unsigned char*)tile_buf)[i];
+      // Count backwards as TIFF is usually MSB2LSB
+      for( int k=7; k>=0; k-- ){
+	// Set values depending on whether bit is set
+	buffer[n++] = (t & (1 << k)) ? max : min;
+      }
+    }
+
+    rawtile.dataLength = n;
+    rawtile.data = buffer;
+    rawtile.bpc = 8;
+    rawtile.memoryManaged = 1;
+  }
+
 
   return( rawtile );
 
